--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+  <link rel="icon" href="https://res.cloudinary.com/dcggcw8df/image/upload/v1754584399/onirzfhhfhskxafrwrkd.png" sizes="32x32" type="image/png" />
+  <link rel="icon" href="https://res.cloudinary.com/dcggcw8df/image/upload/v1754584399/onirzfhhfhskxafrwrkd.png" sizes="16x16" type="image/png" />
+  <link rel="apple-touch-icon" href="https://res.cloudinary.com/dcggcw8df/image/upload/v1754584399/onirzfhhfhskxafrwrkd.png" />
+  
+    <link rel="manifest" href="/manifest.json" />
+<meta name="theme-color" content="#ffffff" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Lira Inmobiliaria | Venta y Alquiler de Inmuebles en Catamarca</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
