--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" href="https://res.cloudinary.com/dcggcw8df/image/upload/v1754584399/onirzfhhfhskxafrwrkd.png" sizes="32x32" type="image/png" />
   <link rel="icon" href="https://res.cloudinary.com/dcggcw8df/image/upload/v1754584399/onirzfhhfhskxafrwrkd.png" sizes="16x16" type="image/png" />
   <link rel="apple-touch-icon" href="https://res.cloudinary.com/dcggcw8df/image/upload/v1754584399/onirzfhhfhskxafrwrkd.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet" />
+
   
     <link rel="manifest" href="/manifest.json" />
 <meta name="theme-color" content="#ffffff" />
